--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
       </section>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a> & <a href="https://github.com/danzel-py">danzel-py</a></p>
     </footer>
   </body>
 </html>
